@@ -29,6 +29,7 @@ add_library(libcupt3 SHARED
 	./src/internal/pipe.cpp
 	./src/internal/basepackageiterator.cpp
 	./src/internal/indexofindex.cpp
+	./src/internal/versionparse.cpp
 	./src/config.cpp
 	./src/cache.cpp
 	./src/cache/relation.cpp
