@@ -20,6 +20,7 @@
 #include <cupt/cache/sourceversion.hpp>
 
 #include <internal/common.hpp>
+#include <internal/versionparse.hpp>
 
 namespace cupt {
 namespace cache {
@@ -30,7 +31,7 @@ SourcePackage::SourcePackage(const string* binaryArchitecture)
 
 unique_ptr< Version > SourcePackage::_parse_version(const Version::InitializationParameters& initParams) const
 {
-	return unique_ptr< Version >(SourceVersion::parseFromFile(initParams));
+	return internal::parseSourceVersion(initParams);
 }
 
 bool SourcePackage::_is_architecture_appropriate(const Version* version) const
